<resources>
    <string name="app_name">SWLPL</string>
    <string name="need_permission">Need Permissions</string>
    <string name="msg_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="permission_alert">GOTO SETTINGS</string>
    <string name="cancel">Cancel Case Id</string>
    <string name="cancel_case_id">Cancel Case Id</string>
    <string name="ok">ok</string>
    <string name="logout_alert">Do you want to logout?</string>
    <string name="alert">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="otp_number">Enter your OTP</string>
    <string name="otp">Send OTP</string>
    <string name="verify">Verify OTP</string>
    <string name="resend">Resend OTP</string>
    <string name="error_validateotp">Enter your OTP Number</string>
    <string name="select_language">Select Language</string>
    <string name="done">Done</string>
    <string name="select_any_one" translatable="false">SELECT ANY ONE</string>
    <string name="account_number">Enter your Account Number</string>
    <string name="welcome_msgf">Welcome\n\n Apna Godam Staff.\n\nNew Features\n\nComing Soon....</string>
    <string name="passbook_photo">Bank Passbook Photo</string>
    <string name="upload_picture">Upload your PassBook  picture</string>
    <string name="home">Staff Dashboard</string>
    <string name="logout">Logout</string>
    <string name="referral_code">Refer &amp;Earn</string>
    <string name="exist_app">Press again to close Apna Staff Application</string>
    <string name="ivr">IVR</string>
    <string name="map_key" translatable="false">AIzaSyC8L6xTNfIAyF7fhMr5-ikUbeBLf9imU-8</string>
    <string name="suggestion_email">Suggestion Emails</string>
    <string name="activity_notification">Activity Notification Email</string>
    <string name="change_language">Change Language</string>
    <string name="change_mobile_no">Change Mobile Number</string>
    <string name="commodity_price">Commodity Price</string>
    <string name="commodity_name">Commodity Name</string>
    <string name="upload_aadhar_picture"> Aadhar card  picture</string>
    <string name="hint_otp">Please type varification code sent to </string>
    <string name="Profile_Screen">Profile Screen</string>
    <string name="submit">Submit</string>
    <string name="blank_msg">Data Not Found !!!</string>
    <string name="setting_title">Setting Screen</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="emp_id">Enter Your Employee ID</string>
    <string name="error_validateempChar"> Employee ID must contain min 6 Digits.</string>
    <string name="my_profile">My Profile</string>
    <string name="update_now">Update now</string>
    <string name="msg_update_app">New version of this app is available. For better user experience please update now.</string>
    <string name="running_in">Running IN Cases</string>
    <string name="running_out">Running OUT Cases</string>
    <string name="current_month_present">Current Month present</string>
    <string name="quick_response">Quick Access</string>
    <string name="reports">Reports</string>
    <string name="inventory">Inventory</string>
    <string name="labour_payment">Labour Payment</string>
    <string name="case_status">Cases Status</string>
    <string name="case_status_in">Cases Status IN</string>
    <string name="case_status_out">Cases Status OUT</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="clock_in">Mark Attendance</string>
    <string name="clock_out">Clock OUT</string>
    <string name="upload_selfi">Upload Selfie</string>
    <string name="chosen_selfi_image">Take Picture</string>
    <string name="close">Close</string>
    <string name="status_title">Status</string>
    <string name="commudity_name">Select Commodity Name</string>
    <string name="terminal_name">Select Terminal Name</string>
    <string name="select_in_out">Select IN/OUT.</string>
    <string name="select_purposee">Select Purpose</string>
    <string name="select_coustomer">Select Customer Name</string>
    <string name="lead_generate_by">Generated By</string>
    <string name="lead_generate">Generate Lead</string>
    <string name="coustomer_name">Enter Customer Name *</string>
    <string name="mobile_no">mobile No *</string>
    <string name="quanity">Enter Quantity in Quintal * </string>
    <string name="commitment_datee">Commitment Date *</string>
    <string name="genrate_btn">Generate</string>
    <string name="lead_listing">Leads List</string>
    <string-array name="array_pupose">
        <item>Purpose *</item>
        <item>For Storage</item>
    </string-array>
    <string-array name="array_split_delivery">
        <item>Split Delivery</item>
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="array_pupose_lead">
        <item>Purpose *</item>
        <item>For Sale</item>
        <item>For Storage</item>
    </string-array>
    <string-array name="array_select_commodity">
        <item>Commodity</item>
    </string-array>
    <string-array name="array_select_terminal">
        <item>Terminal</item>
    </string-array>
    <string-array name="array_select_stack">
        <item>Stack</item>
    </string-array>
    <string name="terminal_name1">Terminal Name</string>
    <string name="case_id">Create Case ID</string>
    <string name="simple_case_id">Case Id</string>
    <string name="weight_kg">Enter Weight in KG *</string>
    <string name="vehicle_no">ENTER VEHICLE/TRUCK NO.</string>
    <string name="location">Enter Location *</string>
    <string name="destination">Enter Source / Destination *</string>
    <string name="weight_quintal">Old Weight(Qtl)</string>
    <string name="gate_pass">Enter Gate Pass No. *</string>
    <string name="fpo_sub_useername">Enter FPO Sub User Name </string>
    <string name="spot_token">Enter Spot Token </string>
    <string name="create_case">Create Case ID</string>
    <string name="case_list">Case IDs List</string>
    <string-array name="array_in_out">
        <item>IN/OUT</item>
        <item>IN</item>
        <item>OUT</item>
    </string-array>
    <string name="lead_id">Lead ID</string>
    <string name="coustomer_name1">Customer Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="more_view">View / Edit</string>
    <string name="location_title">Location</string>
    <string name="commodity">Commodity</string>
    <string name="est_quantity">Est.Quantity\n(Qtl.)</string>
    <string name="terminal">Terminal</string>
    <string name="purpose">Purpose</string>
    <string name="create_date">Created On</string>
    <string name="action">Action</string>
    <string name="case_idd">Case ID</string>
    <string name="sub_user">Sub Users</string>
    <string name="converted_by">Converted By</string>
    <string name="vehicle_noa">Vehicle No</string>
    <string name="in_out">IN/OUT</string>
    <string name="pricing_title">Pricing List</string>
    <string name="set_pricing">Set Price</string>
    <string-array name="trans_type">
        <item>Client Transport</item>
        <item>Company Transport</item>
    </string-array>
    <string name="sub_username">UserName</string>
    <string name="processing_fees">Processing Fees(%) *</string>
    <string name="inteerset_rate">Interest Rate(%) *</string>
    <string name="loan">Loan per Total Amount(%) *</string>
    <string name="price">Price *</string>
    <string name="rent1">Rent</string>
    <string name="labour_rent">Labour Rent</string>
    <string name="notes">Notes</string>
    <string name="telly">Details_in_Telly</string>
    <string name="rent_mt">Rent (MT/Month) *</string>
    <string-array name="array_transaction_type">
        <item>Transaction Type *</item>
        <item>Case (14-2)</item>
        <item>E-Mandi</item>
        <item>FPO</item>
        <item>Rent</item>
    </string-array>
    <string-array name="labour_type">
        <item>Labour Type *</item>
    </string-array>
    <string name="labour_rent_bag">Labour Rent (50KG /Bag) *</string>
    <string name="gatepass_cdf">User Name for GatePass / CDF</string>
    <string name="cold_win">User Name for Coldwin</string>
    <string name="tally_purchasee">Details for Tally (Purchase)</string>
    <string name="tally_loan">Details for Tally (Loan)</string>
    <string name="tally_sale">Details for Tally (Sale)</string>
    <string name="truck_book">Truck Book</string>
    <string name="more_view_truck">View</string>
    <string name="upload_details">Upload Details</string>
    <string name="transporter">Transporter</string>
    <string name="transporter_name">Enter Transporter *</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_phone_no">Driver Phone No*</string>
    <string name="transport_rate">Transport Rate/KM</string>
    <string name="min_weight">Min Weight (Qtl.)</string>
    <string name="max_weight">Max Weight (Qtl.)</string>
    <string name="turnaround_time">Turnaround Time</string>
    <string name="total_weight">Total Weight(Qtl.)</string>
    <string name="bags">Bags</string>
    <string name="gate_passs">Gate Pass</string>
    <string name="total_trans_cost">Total Trans. Cost</string>
    <string name="advance_patyment">Advance Payment</string>
    <string name="start_date_time">Start Date Time</string>
    <string name="end_date_time">End Date Time</string>
    <string name="settleememt_amount">Settlement Amount</string>
    <string name="upload_truck_book">Upload Truck Book</string>
    <string name="taupline_radio">1. Did the truck come with towing and tarpaulin in Inward?</string>
    <string name="wet_radio">2. Were some of the bags wet in Inward?</string>
    <string name="driver_name_validation">Enter Driver Name *</string>
    <string name="driver_phone_no_enter">Enter Driver Phone No *</string>
    <string name="transport_rate_validation">Enter Transport Rate/Qtl *</string>
    <string name="min_weight_val">Enter Min Weight (Qtl.) *</string>
    <string name="max_weight_val">Enter Max Weight (Qtl.) *</string>
    <string name="turnaround_time_val">Enter Turnaround Time(In Hours) *</string>
    <string name="total_weight_val">Enter Total Weight(Qtl.) *</string>
    <string name="bags_val">Enter No of Bags *</string>
    <string name="total_trans_cost_val">Enter Total Transport. Cost(INR) *</string>
    <string name="advance_patyment_val">Enter Advance Payment(INR) *</string>
    <string name="start_date_time_val">Start Date Time *</string>
    <string name="end_date_time_val">End Date Time *</string>
    <string name="settleememt_amount_val">Enter Final Settlement Amount(INR) *</string>
    <string name="labour_book">Labour Book</string>
    <string name="upload_labour">Upload Labour</string>
    <string name="labour_contractor">Labour Contractor</string>
    <string name="contractor_phone">Contractor Phone</string>
    <string name="labour_rate">Labour Rate / Bag</string>
    <string name="labour_total">Total Labour</string>
    <string name="booking_date">Booking Date</string>
    <string name="total_bags">Total Bags</string>
    <string name="contractor_phone_val">Enter Contractor Phone No. *</string>
    <string name="labour_rate_val">Enter Labour Rate Per Bag *</string>
    <string name="labour_total_val">Enter Total No.of Labours *</string>
    <string name="booking_date_val">Enter Booking Date *</string>
    <string name="total_bags_val">Enter Total No. of  Bags *</string>
    <string name="contractor_select">Select Contractor</string>
    <string name="firstkanta_parchi">First Kanta Parchi</string>
    <string name="firstkanta_parchi_title">Kanta Parchi List</string>
    <string name="kanta_parchi">Kanta Parchi</string>
    <string name="previous">Previous Page</string>
    <string name="next">Next Page</string>
    <string name="spot_sell">Spot Deal</string>
</resources>