<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tw__solid_white"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_arrow_back"
                        android:padding="8dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/lead_listing"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_16sdp" />

                    <TextView
                        android:id="@+id/tv_done"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/done"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_top100"
            android:id="@+id/cell_container"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_id"
                style="@style/TextStyleBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/lead_id"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp" />

            <include layout="@layout/layout_divider_horizontal" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextStyleBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/coustomer_name1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp" />

            <include layout="@layout/layout_divider_horizontal" />

            <TextView
                android:id="@+id/tv_phone"
                style="@style/TextStyleBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/phone_no"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp" />

            <include layout="@layout/layout_divider_horizontal" />

            <TextView
                android:id="@+id/tv_more_view"
                style="@style/TextStyleBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/more_view"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10ssp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_defaulters_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/txtempty_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:layout_marginTop="@dimen/_180sdp"
                    android:gravity="center|clip_vertical"
                    android:text="@string/blank_msg"
                    android:textColor="@color/black_back"
                    android:textSize="@dimen/_16ssp"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
