<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkGray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        android:background="@color/colorPrimary"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_close"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_arrow_back"
                            android:padding="8dp" />

                        <TextView
                            android:id="@+id/title_header"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/spot_sell"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/tv_done"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/done"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/filterIcon"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/_20sdp"
                            android:backgroundTint="@color/colorWhite"
                            android:gravity="center"
                            android:padding="@dimen/_2sdp"
                            android:src="@android:drawable/ic_search_category_default"
                            app:tint="@color/colorWhite" />
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:id="@+id/cell_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/color_top100"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_id"
                    style="@style/TextStyleBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/gate_pass"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10ssp" />

                <include layout="@layout/layout_divider_horizontal" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/TextStyleBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/commodity"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10ssp" />

                <include layout="@layout/layout_divider_horizontal" />

                <TextView
                    android:id="@+id/tv_phone"
                    style="@style/TextStyleBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/loan"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10ssp" />

                <include layout="@layout/layout_divider_horizontal" />

                <TextView
                    android:id="@+id/tv_more_view"
                    style="@style/TextStyleBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/action"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtempty_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center"
                android:layout_marginTop="@dimen/_60ssp"
                android:gravity="center|clip_vertical"
                android:text="@string/blank_msg"
                android:textColor="@color/black_back"
                android:textSize="@dimen/_16ssp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/swipeRefresherStock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/page_next_privious">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fieldStockList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        tools:listitem="@layout/commudity_sell" />
                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

                <LinearLayout
                    android:id="@+id/page_next_privious"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/tvPrevious"
                        style="@style/TextStyleBold"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/previous"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/tvNext"
                        style="@style/TextStyleBold"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/_4sdp"
                        android:text="@string/next"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
